2001-12-11  Eric Busboom  <eric@softwarestudio.org>

	* icaltime.c Fixed icaltime_from_day_of_year to correctly handle 
	negative and over-range day-of-years

	* icaltime.c collected all instances of leap year code into
	icaltime_is_leap_year

	* icaltime.c icaltime_day_of_year. Changed an assert into code
	that advances the year when the day of year is lager than the
	number of days in the given year

	* icalerrno.c,h Added the function version
	icalerror_set_errno. Only the define verson existed.

	* icaltime.c Moved all of the getenv/putenv operations into icaltimegm()
	
2001-06-29  Eric Busboom  <eric@softwarestudio.org>

	* icalderivedproperties.h,c Changed the signature if the CLASS
	property from TEXT to CLASS. ( enum icalproperty_class) 

2001-06-22  Eric Busboom  <eric@softwarestudio.org>

	* icaltypes.c Fixed bug in icaltriggertype_new_from_string htat
	caused it to fail.

2001-04-12  Eric Busboom  <eric@softwarestudio.org>

	* icalvalue.c Added quoting to apostrophies ("'") in text
 	values. This is not required by the spec, but it is necessary in
 	icallangbind_property_eval_string, since ' is special in both perl
 	and python.

2001-04-10  Eric Busboom  <eric@softwarestudio.org>

	* icalvalue.c Added routine icalvalue_reset_kind. This routine is
 	now called by all autogenerated icalvalue_set_*
 	routines. icalvalue_reset_kind() will change the kind of the value
 	based on the data in the value. Currently, it will set a value to
 	either DATETIME or DATE based on the is_date flag of icaltimetype.

2001-04-09  Eric Busboom  <eric@softwarestudio.org>

	* icalproperty.h Converted REQUEST-STATUS to use the struct
 	icalreqstat structure instead of a string

2001-04-01  Eric Busboom  <eric@softwarestudio.org>

	* icalcomponent.h Changed meaning of
 	icalcomponent_new_from_string. It used to create a new component
 	given the text name of the component type to create. Now it calls
 	icalparser_parse_string to create a new component from the