@@ -3,7 +3,7 @@
   FILE: icalrecur.c
   CREATOR: eric 16 May 2000
   
-  $Id: icalrecur.c,v 1.21 2001-12-12 06:49:33 ebusboom Exp $
+  $Id: icalrecur.c,v 1.22 2001-12-12 18:03:25 ebusboom Exp $
   $Locker:  $
     
 
@@ -1783,7 +1783,11 @@ int expand_year_days(struct icalrecur_iterator_impl* impl,short year)
         
     case 0: {
         /* FREQ=YEARLY; */
+        short doy = icaltime_day_of_year(impl->dtstart) + 
+            icaltime_is_leap_year(impl->last.year);
         
+        impl->days[days_index++] = doy;
+  
         break;
     }
     case 1<<BY_MONTH: {
