@@ -1,13 +1,13 @@
 BEGIN:VEVENT
 DESCRIPTION
- :Recur every sunday and tuesday
-RRULE
- :FREQ=WEEKLY;COUNT=10;INTERVAL=1;BYDAY=SU,TU
+ : Once a Year
 DTSTART
- :20011216T192500
-DTEND
- :20011216T202500
+ ;TZID=US-Eastern
+ :20010205T090000
+RRULE
+ :FREQ=YEARLY;INTERVAL=1
 END:VEVENT
+
 
 BEGIN:VEVENT
 DESCRIPTION
