@@ -1,5 +1,15 @@
 BEGIN:VEVENT
 DESCRIPTION
+ : Once a Year
+DTSTART
+ ;TZID=US-Eastern
+ :20010205T090000
+RRULE
+ :FREQ=YEARLY;INTERVAL=1
+END:VEVENT
+
+BEGIN:VEVENT
+DESCRIPTION
  :Recur every sunday and tuesday
 RRULE
  :FREQ=WEEKLY;COUNT=10;INTERVAL=1;BYDAY=SU,TU
@@ -12,7 +22,6 @@ END:VEVENT
 BEGIN:VEVENT
 DESCRIPTION
  :Every first tuesday of the month
- :
 RRULE
  :FREQ=MONTHLY;INTERVAL=1;COUNT=3;BYDAY=1TU
 DTSTART
@@ -20,7 +29,6 @@ DTSTART
 DTEND
  :20011204T163500
 END:VEVENT
-
 
 BEGIN:VEVENT
 DESCRIPTION
